# lockpicks-data-migration

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEMO_SCRIPT.md  OVERVIEW.md  RAG_EXPLANATION.md  RAG_METADATA_ANALYSIS.md  README.md  SCORING.md  TECHNICAL.md  VALUE_PROPOSITION_DECK.md  WALKTHROUGH.md  config.yaml  dashboard.py  demo.sh  docker-compose-openmetadata.yml  generate_schemas.py  main.py  pyproject.toml  pytest.ini  quick-start.sh  requirements.txt  setup_databases.py
agents/: __init__.py  orchestrator.py  post_agent.py  pre_agent.py
artifacts/run_2026-02-14_01-12-20/: confidence_score.txt  governance_report.csv  readiness_report.md  run_metadata.json  schema_diff.md
artifacts/run_2026-02-14_01-12-40/: confidence_score.txt  drift_summary.md  run_metadata.json
artifacts/run_2026-02-14_01-12-59/: confidence_score.txt  reconciliation_report.md  run_metadata.json
artifacts/run_2026-02-14_01-15-37/: confidence_score.txt  readiness_report.md  run_metadata.json  schema_diff.md
artifacts/run_2026-02-14_01-16-10/: confidence_score.txt  drift_log.json  drift_summary.md  run_metadata.json
artifacts/run_2026-02-14_01-16-33/: confidence_score.txt  reconciliation_report.md  run_metadata.json
artifacts/run_2026-02-14_23-56-51/: READINESS_DASHBOARD.md  confidence_score.txt  readiness_report.md  run_metadata.json
dm/: __init__.py  cli.py  config.py  hookspecs.py  pipeline.py  pipeline_flatfile.py  plugin_manager.py  repo_loader.py  scoring.py
dm/ai/: client.py  fallback.py  prompts.py
docs/: data_migration_accelerator_brief.md  data_migration_brief.md
metadata/: .embeddings_cache.npz  glossary.json  mappings.json
schemas/: __init__.py
setup/: README.md  create_databases.sql  load_legacy_data.sql  load_modern_data.sql
tests/: conftest.py  test_multi_target.py
tools/: __init__.py  db_utils.py  governance.py  metadata_generator.py  rag_tool.py  reporter.py  sampler.py  schema_loader.py
(+418 files in other folders)
