[project]
name = "lockpicks-data-migration-validation"
version = "0.1.0"
description = "Data migration validation agent with pre/post checks, governance, and RAG-powered schema explanations"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "pandera>=0.17.0",
    "psycopg2-binary>=2.9.0",
    "sentence-transformers>=2.2.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
