[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lockpicks-data-migration"
version = "0.1.0"
description = "Lockpicks Data Migration — discover legacy assets via OpenMetadata, generate normalized modern schemas, and validate migrations with confidence scoring"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pluggy>=1.3",
    "pandas>=2.0.0",
    "pandera>=0.17.0",
    "psycopg2-binary>=2.9.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "sqlglot>=20.0",
]

[project.optional-dependencies]
rag = ["sentence-transformers>=2.2.0"]
dashboard = ["streamlit>=1.32.0", "plotly>=5.18.0"]
sqlalchemy = ["sqlalchemy>=2.0"]
ai = ["anthropic>=0.30.0"]
observer = ["schedule>=1.2.0"]
all = ["lockpicks-data-migration[rag,dashboard,sqlalchemy,ai,observer]"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
dm = "dm.cli:cli"

[project.entry-points."dm"]
# Third-party plugins register here via setuptools entry_points

[tool.setuptools.packages.find]
include = ["dm*"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
